fix modal shifting left issue

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body {
   font-size: 1.5rem;
 }
 
+.modal-open[style] {
+  padding-right: 0px !important;
+  }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
